# KARTIK

./: README.md  config.py  pyproject.toml
.github/workflows/: block.yml
AloneMusic/plugins/admins/: font.py  sangamata.py
AloneMusic/plugins/misc/: watcher.py
AloneMusic/utils/: thumbnails.py
strings/langs/: en.yml
