[build-system]
requires = ["setuptools>=70.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "AloneMusic"
version = "0.1.0"
description = "🎵 Advanced Telegram Music Bot by TheAloneTeam — PyroFork + ntgcalls + YouTube + Spotify"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "TheAloneTeam", email = "thealoneteam@github.com" }
]
keywords = ["telegram", "music", "bot", "pyrogram", "pyrofork", "pytgcalls", "youtube", "spotify"]
classifiers = [
  "Environment :: Console",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet",
  "Topic :: Utilities",
]

dependencies = [
    "aiofiles",
    "aiohttp>=3.9.5",
    "apscheduler",
    "beautifulsoup4",
    "dnspython",
    "gitpython",
    "hachoir",
    "httpx",
    "humanize",
    "requests",
    "python-dotenv",
    "pyyaml",
    "unidecode",
    "tgcrypto",
    "pyrofork>=2.3.45",
    "pykeyboard",
    "ffmpeg-python",
    "ntgcalls==2.0.6",
    "py-tgcalls==2.2.8",
    "motor>=3.4.0",
    "psutil",
    "heroku3",
    "Pillow==12.0.0",
    "speedtest-cli",
    "yt-dlp",
    "youtube-search",
    "youtube-search-python",
    "py-yt-search==0.5.3",
    "spotipy",
    "openai>=1.40.0",
    "prettytable",
]

[tool.setuptools.packages.find]
include = ["AloneMusic", "core", "config", "strings"]

[project.urls]
Repository = "https://github.com/TheAloneTeam/AloneMusic"
Issues = "https://github.com/TheAloneTeam/AloneMusic/issues"
Changelog = "https://github.com/TheAloneTeam/AloneMusic/blob/master/CHANGELOG.md"

[project.scripts]
alonemusic = "AloneMusic.__main__:main"
